# DAT-Bench

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
configs/eval/: dat-benchmark.toml
divergent_bench/: __init__.py
divergent_bench/config/: strategies.py
divergent_bench/dat/: scorer.py
divergent_bench/data/: fixtures.py
divergent_bench/experiments/: runner.py
divergent_bench/llm/: __init__.py  client.py  config.py  providers.py
divergent_bench/metrics/: __init__.py  dsi.py  lziv.py
divergent_bench/rubrics/: __init__.py  dat_rubric.py
divergent_bench/visualization/: README.md  __init__.py  loader.py  plots.py  styles.py
docs/: README.md
docs/api/: structured-output.md
docs/development/: ROADMAP.md  cli-implementation.md  technical-notes.md
docs/research/: dat-gpt-analysis.md  verifiers-alignment-plan.md  word-chain-trajectory-benchmark-design.md
environments/dat_bench/: dat_bench.py  pyproject.toml
scripts/: demo.py  run_dat.py  test_triangular_matrix.py  test_visualization.py
tests/: README.md  conftest.py  e2e_verifiers.py
tests/integration/: test_api_endpoints.py  test_end_to_end.py  test_modern_instructor.py  test_ollama_models.py  test_structured_output.py
tests/unit/: test_dat_scorer.py  test_fixtures.py  test_metrics.py  test_model_detection.py
